Estructura base del index.html

--- a/index.html
+++ b/index.html
@@ -22,9 +22,33 @@
             </ol>
         </nav>
     </header>
-    <section>Sección principal</section>
-    <section>Sección Portafolio</section>
-    <section>Sección Skills</section>
+    <section>
+        <h1>
+            Hola! soy <strong>Joe Mancera</strong> Desarrollador <br/>Web casi <strong>unicorrnio</strong> Tech...<br/> Un unicornio bebé
+        </h1>
+        <img src="" alt="Imagen de portada" />
+    </section>
+    <section>
+        <h2>Portafolio (Proyectos Destacados)</h2>
+        <article>
+            <h3>Platzi Video</h3>
+            <h6>React Native / React</h6>
+            <p><small><strong>Fecha:</strong>  01/07/2019</small></p>
+            <p><small><strong>Puedes verlo en:</strong>  platzi.com/Diploma</small></p>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores odit nostrum nesciunt totam illum maiores voluptates officia dignissimos sapiente rem? Illum, vitae aperiam nisi a delectus fugit. Reiciendis, blanditiis ab? </p>
+        </article>
+    </section>
+    <section>
+        <h2>Mis Skills</h2>
+        <article>
+            <figure>
+                <img src="" alt="Img Skill 1" />
+            </figure>
+            <h3>Desarrollo Web</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, blanditiis. Repellendus dignissimos est et maxime. Repellat, ducimus nam nesciunt eius exercitationem voluptatibus optio mollitia sunt saepe, beatae rem excepturi? Repellendus?</p>
+            <a href="#">Ver Certificado</a>
+        </article>
+    </section>
     <section>Sección contacto</section>
     <footer>footer</footer>
 </body>
