Agrego imagenes de prueba leonidas protafolio

--- a/index.html
+++ b/index.html
@@ -5,28 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Joe Mancera</title>
+    <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
     <header>
-        <nav>
-            <ol>
-                <li>
-                    <a href="#">Portafolio</a>
-                </li>
-                <li>
-                    <a href="#">Experiencia</a>
-                </li>
-                <li>
-                    <a href="#">Trabajemos Juntos</a>
-                </li>
-            </ol>
-        </nav>
+        <div>
+            <figure>
+                <img src="images/logo.png" alt="Logo JoeMancera" />
+            </figure>
+            <nav>
+                <ol>
+                    <li>
+                        <a href="#">Portafolio</a>
+                    </li>
+                    <li>
+                        <a href="#">Experiencia</a>
+                    </li>
+                    <li>
+                        <a href="#">Trabajemos Juntos</a>
+                    </li>
+                </ol>
+            </nav>
+        </div>
     </header>
     <section>
         <h1>
             Hola! soy <strong>Joe Mancera</strong> Desarrollador <br/>Web casi <strong>unicorrnio</strong> Tech...<br/> Un unicornio bebé
         </h1>
-        <img src="" alt="Imagen de portada" />
+        <img src="images/hero.jpg" alt="Imagen de portada" width="500" />
     </section>
     <section>
         <h2>Portafolio (Proyectos Destacados)</h2>
@@ -36,13 +42,14 @@
             <p><small><strong>Fecha:</strong>  01/07/2019</small></p>
             <p><small><strong>Puedes verlo en:</strong>  platzi.com/Diploma</small></p>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores odit nostrum nesciunt totam illum maiores voluptates officia dignissimos sapiente rem? Illum, vitae aperiam nisi a delectus fugit. Reiciendis, blanditiis ab? </p>
+            <img src="images/platzi-video-react-native.png" alt="Proyecto 1" width="500" />
         </article>
     </section>
     <section>
         <h2>Mis Skills</h2>
         <article>
             <figure>
-                <img src="" alt="Img Skill 1" />
+                <img src="images/platzi-conf.jpg" alt="Img Skill 1" width="500" />
             </figure>
             <h3>Desarrollo Web</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, blanditiis. Repellendus dignissimos est et maxime. Repellat, ducimus nam nesciunt eius exercitationem voluptatibus optio mollitia sunt saepe, beatae rem excepturi? Repellendus?</p>
