sección de contactenos

--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
             <a href="#">Ver Certificado</a>
         </article>
     </section>
-    <section>Sección contacto</section>
+    <section>
+        <form action="">
+            <h3>¿Creamos algo juntos?</h3>
+            <input type="email" placeholder="Déjame tu e-mail">
+            <button>Enviar</button>
+        </form>
+    </section>
     <footer>footer</footer>
 </body>
 </html>
