enlaces de secciones

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <nav>
                 <ol>
                     <li>
-                        <a href="#">Portafolio</a>
+                        <a href="#portafolio">Portafolio</a>
                     </li>
                     <li>
-                        <a href="#">Experiencia</a>
+                        <a href="#habilidades">Experiencia</a>
                     </li>
                     <li>
-                        <a href="#">Trabajemos Juntos</a>
+                        <a href="#contacto">Trabajemos Juntos</a>
                     </li>
                 </ol>
             </nav>
@@ -34,7 +34,7 @@
         </h1>
         <img src="images/hero.jpg" alt="Imagen de portada" width="500" />
     </section>
-    <section>
+    <section id="portafolio">
         <h2>Portafolio (Proyectos Destacados)</h2>
         <article>
             <h3>Platzi Video</h3>
@@ -45,7 +45,7 @@
             <img src="images/platzi-video-react-native.png" alt="Proyecto 1" width="500" />
         </article>
     </section>
-    <section>
+    <section id="habilidades">
         <h2>Mis Skills</h2>
         <article>
             <figure>
@@ -56,7 +56,7 @@
             <a href="#">Ver Certificado</a>
         </article>
     </section>
-    <section>
+    <section id="contacto">
         <form action="">
             <h3>¿Creamos algo juntos?</h3>
             <input type="email" placeholder="Déjame tu e-mail">
