se agrega estilos a hero y proyecto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Joe Mancera</title>
     <link rel="icon" href="images/favicon.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -31,22 +32,36 @@
     </header>
     <section class="hero">
         <h1>
-            Hola! soy <strong>Joe Mancera</strong> Desarrollador <br/>Web casi <strong>unicorrnio</strong> Tech...<br/> Un unicornio bebé
+            ¡Hola! soy <strong>Joe Mancera</strong> Desarrollador <br/>Web casi <strong>unicorrnio</strong> Tech...<br/> Un unicornio bebé
         </h1>
-        <img src="images/hero.jpg" alt="Imagen de portada" width="500" />
+        <!-- <img src="images/hero.jpg" alt="Imagen de portada" width="500" /> -->
     </section>
     <section id="portafolio" class="portfolio">
         <h2>Portafolio (Proyectos Destacados)</h2>
         <article class="project">
-            <h3 class="project-title">Platzi Video</h3>
-            <h6 class="project-course">React Native / React</h6>
-            <p class="project-date"><small><strong>Fecha:</strong>  01/07/2019</small></p>
-            <p class="project-url"><small><strong>Puedes verlo en:</strong>  platzi.com/Diploma</small></p>
-            <p class="project-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores odit nostrum nesciunt totam illum maiores voluptates officia dignissimos sapiente rem? Illum, vitae aperiam nisi a delectus fugit. Reiciendis, blanditiis ab? </p>
+            <div class="project-details">
+                <h3 class="project-title">Platzi Video</h3>
+                <h6 class="project-course">React Native / React</h6>
+                <p class="project-date"><small><strong>Fecha:</strong>  01/07/2019</small></p>
+                <p class="project-url"><small><strong>Puedes verlo en:</strong>  platzi.com/Diploma</small></p>
+                <p class="project-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores odit nostrum nesciunt totam illum maiores voluptates officia dignissimos sapiente rem? Illum, vitae aperiam nisi a delectus fugit. Reiciendis, blanditiis ab? </p>
+            </div>
             <figure class="project-image-container">
                 <img class="project-image" src="images/platzi-video-react-native.png" alt="Proyecto 1" width="500" />
             </figure>
         </article>
+        <article class="project">
+                <div class="project-details">
+                    <h3 class="project-title">Platzi Video</h3>
+                    <h6 class="project-course">React Native / React</h6>
+                    <p class="project-date"><small><strong>Fecha:</strong>  01/07/2019</small></p>
+                    <p class="project-url"><small><strong>Puedes verlo en:</strong>  platzi.com/Diploma</small></p>
+                    <p class="project-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores odit nostrum nesciunt totam illum maiores voluptates officia dignissimos sapiente rem? Illum, vitae aperiam nisi a delectus fugit. Reiciendis, blanditiis ab? </p>
+                </div>
+                <figure class="project-image-container">
+                    <img class="project-image" src="images/platzi-video-react-native.png" alt="Proyecto 1" width="500" />
+                </figure>
+            </article>
     </section>
     <section id="habilidades">
         <h2>Mis Skills</h2>
