Cambio estilos para hero def

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a class="link" href="#portafolio">Portafolio</a>
                     </li>
                     <li>
-                        <a class="link" href="#habilidades">Experiencia</a>
+                        <a class="link" href="#habilidades">Habilidades</a>
                     </li>
                     <li>
                         <a class="link" href="#contacto">Trabajemos Juntos</a>
@@ -33,9 +33,19 @@
     <section class="hero">
         <div class="container">
             <h1>
-                ¡Hola! soy <strong>Joe Mancera</strong> Desarrollador <br/>Web casi <strong>unicorrnio</strong> Tech...<br/> Un unicornio bebé
+                ¡Hola! soy <strong>Joe Mancera</strong> Desarrollador <br/>Web casi <strong>unicornio</strong> tech...<br/> Un unicornio en formación
             </h1>
             <img class="hero-image" src="images/hero.jpg" alt="Imagen de portada" width="500" height="300" />
+        </div>
+    </section>
+    <section class="my-self">
+        <div class="container">
+            <h2>¿Quién soy?</h2>
+            <article class="my-selfDescription">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio velit sed minus, odit deserunt voluptatibus, quo placeat similique minima voluptatum quia quidem ea officiis id nostrum ducimus alias voluptates distinctio!
+                </p>
+            </article>
         </div>
     </section>
     <section id="portafolio" class="portfolio">
@@ -67,7 +77,7 @@
             </article>
         </div>
     </section>
-    <section id="habilidades">
+    <section id="habilidades" class="skill-list">
         <div class="container">
             <h2 class="skills-title">Mis Skills</h2>
             <div class="skills">
