agrego logo propio

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Joe Mancera</title>
     <link rel="icon" href="images/favicon.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
@@ -33,7 +34,7 @@
     <section class="hero">
         <div class="container">
             <h1>
-                ¡Hola! soy <strong>Joe Mancera</strong> Desarrollador <br/>Web casi <strong>unicornio</strong> tech...<br/> Un unicornio en formación
+                ¡Hola! soy <strong>Joe Mancera</strong>  <br/>Desarrollador Web <br>Casi <strong>unicornio</strong> tech...<br/> Un unicornio en formación
             </h1>
             <img class="hero-image" src="images/hero.jpg" alt="Imagen de portada" width="500" height="300" />
         </div>
