agrego y actualizo imagenes del hero, favicon y la de platzi

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             <h2>¿Quién soy?</h2>
             <article class="my-selfDescription">
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio velit sed minus, odit deserunt voluptatibus, quo placeat similique minima voluptatum quia quidem ea officiis id nostrum ducimus alias voluptates distinctio!
+                    En gran parte, he sido desarrollador. Empecé hace unos 4 años trabajando en una pequeña empresa de software lo cual me ayudó a prepararme para grandes retos. Ahora trabajo en una gran consultora. <br><br>
+                    Me considero un posible puente en equipos de desarrollo y diseño ya que tengo la habilidad de aprender bastante rápido. Me gusta lo dinámico y lo que requiera cierto nivel de exigencia. <br><br>
+                    Creo en que gracias a la tecnología podamos ayudar a nuestro planeta, ayudar a nuestros estilos de vida a ser más sanos. Me gusta imaginar un futuro en el que la tecnología sea nuestra amiga.
                 </p>
             </article>
         </div>
@@ -142,8 +144,8 @@
     </section>
     <footer class="footer">
         <div class="container">
-            <div>Curso de desarrollo web 2018 <img width="80px" src="images/platzi.png" alt="platzi"> </div>
-            <div>Desinged by @Thespianartis</div>
+            <div>Gracias a <img width="80px" src="images/platzi.png" alt="platzi"> </div>
+            <div>Desinged by <a href="https://instagram.com/joeharrym">@joeharrym</a></div>
         </div>
     </footer>
 </body>
