agrego proyectos y skills

--- a/index.html
+++ b/index.html
@@ -56,23 +56,28 @@
             <h2>Portafolio (Proyectos Destacados)</h2>
             <article class="project">
                 <div class="project-details">
-                    <h3 class="project-title">Platzi Video</h3>
-                    <h6 class="project-course">React Native / React</h6>
-                    <p class="project-date"><small><strong>Fecha:</strong>  01/07/2019</small></p>
-                    <p class="project-url"><small><strong>Puedes verlo en:</strong>  platzi.com/Diploma</small></p>
-                    <p class="project-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores odit nostrum nesciunt totam illum maiores voluptates officia dignissimos sapiente rem? Illum, vitae aperiam nisi a delectus fugit. Reiciendis, blanditiis ab? </p>
+                    <h3 class="project-title">Shopping Car</h3>
+                    <h6 class="project-course">C# / .NET</h6>
+                    <p class="project-date"><small><strong>Fecha:</strong>  Marzo de 2017</small></p>
+                    <p class="project-url"><small><strong>Puedes verlo en:</strong> <a target="_blank" href="http://shoppingwebcar.apphb.com">AppHarbor.com</a> o en <a href="https://github.com/JoeMancera/shoppingcar">GitHub</a> </small></p>
+                    <p class="project-description"> 
+                        Este proyecto lo realicé para la prueba de ingreso para una empresa. Consistía en realizar un proyecto en donde se consumieran servicios web desde la parte web. <br>
+                        Lo más dificil fue implementar los servicios web ya que no sabia como hacerlos. La parte más facil fue hacer el frontend de la aplicación (MVC).
+                     </p>
                 </div>
                 <figure class="project-image-container">
-                    <img class="project-image" src="images/platzi-video-react-native.png" alt="Proyecto 1" width="500" />
+                    <img class="project-image" src="images/shoppingcar-cs-net.png" alt="Proyecto 1" width="500" />
                 </figure>
             </article>
             <article class="project">
                 <div class="project-details">
-                    <h3 class="project-title">Platzi Video</h3>
-                    <h6 class="project-course">React Native / React</h6>
-                    <p class="project-date"><small><strong>Fecha:</strong>  01/07/2019</small></p>
-                    <p class="project-url"><small><strong>Puedes verlo en:</strong>  platzi.com/Diploma</small></p>
-                    <p class="project-description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores odit nostrum nesciunt totam illum maiores voluptates officia dignissimos sapiente rem? Illum, vitae aperiam nisi a delectus fugit. Reiciendis, blanditiis ab? </p>
+                    <h3 class="project-title">Demo Techedge</h3>
+                    <h6 class="project-course">HTML - CSS - Javascript</h6>
+                    <p class="project-date"><small><strong>Fecha:</strong>  Octubre de 2018</small></p>
+                    <p class="project-url"><small><strong>Puedes verlo en:</strong>  <a href="https://github.com/JoeMancera/DemoTechedge">GitHub</a></small></p>
+                    <p class="project-description"> 
+                        Este proyecto lo hice para una demo. el propósito era mostrar que la plataforma OpenText se puede complementar con aplicaciones externas, todo, por medio de sus APIs REST.
+                    </p>
                 </div>
                 <figure class="project-image-container">
                     <img class="project-image" src="images/platzi-video-react-native.png" alt="Proyecto 1" width="500" />
@@ -86,11 +91,25 @@
             <div class="skills">
                 <article class="skill">
                     <figure class="skill-image-container">
-                        <img class="skill-image" src="images/platzi-conf.jpg" alt="Img Skill 1" width="500" />
+                        <img class="skill-image" src="images/desarrollo-web.jpg" title="Photo by Joshua Aragon on Unsplash" alt="Img Skill 1" width="500" />
                     </figure>
                     <div class="skill-detail">
                         <h3 class="skill-title">Desarrollo Web</h3>
-                        <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, blanditiis. Repellendus dignissimos est et maxime. Repellat, ducimus nam nesciunt eius exercitationem voluptatibus optio mollitia sunt saepe, beatae rem excepturi? Repellendus?</p>
+                        <p class="skill-description">
+                            El desarrollo web lo empecé desde que estaba en la universidad y le tome gran cariño. Se me facilita usar frameworks como bootstrap o realizar estilos a medida.
+                        </p>
+                        <a target="_blank" class="skill-url" href="https://platzi.com/@joemancera/curso/1350-html5-css3/diploma/detalle/">Ver Certificado</a>
+                    </div>
+                </article>
+                <article class="skill">
+                    <figure class="skill-image-container">
+                        <img class="skill-image" src="images/git-github.jpg" title="Photo by Jacob Miller on Unsplash" alt="Img Skill 1" width="500" />
+                    </figure>
+                    <div class="skill-detail">
+                        <h3 class="skill-title">Git y GitHub</h3>
+                        <p class="skill-description">
+                            En esta era gobernada por código y tecnología es imposible manejar proyectos sin una exelente herramienta como Git y GitHub para compartirlo.
+                        </p>
                         <a class="skill-url" href="#">Ver Certificado</a>
                     </div>
                 </article>
@@ -106,22 +125,12 @@
                 </article>
                 <article class="skill">
                     <figure class="skill-image-container">
-                        <img class="skill-image" src="images/platzi-conf.jpg" alt="Img Skill 1" width="500" />
+                        <img class="skill-image" src="images/amateur.jpg" alt="Img Skill 1" width="500" />
                     </figure>
                     <div class="skill-detail">
-                        <h3 class="skill-title">Desarrollo Web</h3>
+                        <h3 class="skill-title">Fotografía Amateur</h3>
                         <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, blanditiis. Repellendus dignissimos est et maxime. Repellat, ducimus nam nesciunt eius exercitationem voluptatibus optio mollitia sunt saepe, beatae rem excepturi? Repellendus?</p>
-                        <a class="skill-url" href="#">Ver Certificado</a>
-                    </div>
-                </article>
-                <article class="skill">
-                    <figure class="skill-image-container">
-                        <img class="skill-image" src="images/platzi-conf.jpg" alt="Img Skill 1" width="500" />
-                    </figure>
-                    <div class="skill-detail">
-                        <h3 class="skill-title">Desarrollo Web</h3>
-                        <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, blanditiis. Repellendus dignissimos est et maxime. Repellat, ducimus nam nesciunt eius exercitationem voluptatibus optio mollitia sunt saepe, beatae rem excepturi? Repellendus?</p>
-                        <a class="skill-url" href="#">Ver Certificado</a>
+                        <a target="_blank" class="skill-url" href="https://500px.com/joeharrym">Ver 500px</a>
                     </div>
                 </article>
             </div>        
