agrego habilidad de fotografía

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <p class="project-description"> 
                         Este proyecto lo realicé para la prueba de ingreso para una empresa. Consistía en realizar un proyecto en donde se consumieran servicios web desde la parte web. <br>
                         Lo más dificil fue implementar los servicios web ya que no sabia como hacerlos. La parte más facil fue hacer el frontend de la aplicación (MVC).
-                     </p>
+                    </p>
                 </div>
                 <figure class="project-image-container">
                     <img class="project-image" src="images/shoppingcar-cs-net.png" alt="Proyecto 1" width="500" />
@@ -115,22 +115,24 @@
                 </article>
                 <article class="skill">
                     <figure class="skill-image-container">
-                        <img class="skill-image" src="images/platzi-conf.jpg" alt="Img Skill 1" width="500" />
-                    </figure>
-                    <div class="skill-detail">
-                        <h3 class="skill-title">Desarrollo Web</h3>
-                        <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, blanditiis. Repellendus dignissimos est et maxime. Repellat, ducimus nam nesciunt eius exercitationem voluptatibus optio mollitia sunt saepe, beatae rem excepturi? Repellendus?</p>
-                        <a class="skill-url" href="#">Ver Certificado</a>
-                    </div>
-                </article>
-                <article class="skill">
-                    <figure class="skill-image-container">
                         <img class="skill-image" src="images/amateur.jpg" alt="Img Skill 1" width="500" />
                     </figure>
                     <div class="skill-detail">
                         <h3 class="skill-title">Fotografía Amateur</h3>
-                        <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, blanditiis. Repellendus dignissimos est et maxime. Repellat, ducimus nam nesciunt eius exercitationem voluptatibus optio mollitia sunt saepe, beatae rem excepturi? Repellendus?</p>
+                        <p class="skill-description">
+                            Me gusta tomar fotos casi en cualquier lugar. creo que es una forma artistica de guardar un punto de vista, la belleza y simpleza de un lugar.
+                        </p>
                         <a target="_blank" class="skill-url" href="https://500px.com/joeharrym">Ver 500px</a>
+                    </div>
+                </article>
+                <article class="skill">
+                    <figure class="skill-image-container">
+                        <img class="skill-image" src="images/platzi-conf.jpg" alt="Img Skill 1" width="500" />
+                    </figure>
+                    <div class="skill-detail">
+                        <h3 class="skill-title">Diseño Web</h3>
+                        <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, blanditiis. Repellendus dignissimos est et maxime. Repellat, ducimus nam nesciunt eius exercitationem voluptatibus optio mollitia sunt saepe, beatae rem excepturi? Repellendus?</p>
+                        <a class="skill-url" href="#">Ver Certificado</a>
                     </div>
                 </article>
             </div>        
